# bastepin

./: .gitignore  Cargo.toml  storage
src/: encoding.rs  endpoints.rs  main.rs  storage.rs  tests.rs
templates/: error.html  upload.html
web/: index.html
web/static/: index.js  style.css  upload.js
