[package]
name = "bastepin"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
axum = { version = "0.8.4", features = ["macros"] }
base64 = "0.22.1"
flate2 = { version = "1.1.2", features = ["zlib-rs"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
twox-hash = "2.1.1"
